# CoSim

CoSim/: .dockerignore  (+37 more)
CoSim/backend/: .env.auth0  .env.auth0.example  .env.example  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  environment.yml  pyproject.toml
CoSim/backend/alembic/: env.py  script.py.mako
CoSim/backend/alembic/versions/: 0001_initial.py  0002_sessions.py  0003_workspace_files.py  0004_user_plan.py  0005_add_user_external_id.py  0005_auth0_support.py
CoSim/backend/scripts/: init_admin.py
CoSim/backend/services/chatbot/: Dockerfile  README.md  main.py  product_docs.txt  requirements.txt  start.py  vector_store.py
CoSim/backend/src/co_sim/: __init__.py
CoSim/backend/src/co_sim/agents/: __init__.py
CoSim/backend/src/co_sim/api/: __init__.py  dependencies.py  dependencies_auth0.py
CoSim/backend/src/co_sim/core/: auth0_config.py  config.py  logging.py
CoSim/backend/src/co_sim/db/: __init__.py  base.py  session.py
CoSim/backend/src/co_sim/models/: __init__.py  api_key.py  dataset.py  membership.py  mixins.py  organization.py  project.py  secret.py  session.py  template.py  user.py  workspace.py  workspace_file.py
CoSim/backend/src/co_sim/schemas/: auth.py  base.py  collab.py  dataset.py  organization.py  project.py  secret.py  session.py  template.py  user.py  workspace.py  workspace_file.py
CoSim/backend/templates/: .gitignore
CoSim/backend/templates/mujoco/: cartpole.xml  cartpole_control.py
CoSim/backend/templates/pybullet/: README.md  cartpole.urdf  cartpole_demo.py
CoSim/backend/tests/: test_auth0_exchange.py
(+149 files in other folders)
